<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:contentDescription="@string/imageLabel"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/genreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select genre"
                android:textSize="20sp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/performerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Performer"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/performer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/albumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Album"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/yearOfIssueLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Year of issue"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/year_of_issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/createdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Created"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <LinearLayout
            android:id="@+id/updatedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Updated"
                android:textSize="20sp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/updated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/newSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveSong" />

        <Button
            android:id="@+id/updateSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateSong" />

        <Button
            android:id="@+id/deleteSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteSong" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBack" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>